# LabCib2019

./: .gitignore  README.md
Embedded_workspace/: .gitignore
Embedded_workspace/1) led_button/src/: main.cpp
Embedded_workspace/2) led_potentiometer/src/: main.cpp
Embedded_workspace/3) timer_hardware/: platformio.ini
Embedded_workspace/3) timer_hardware/src/: main.cpp
Embedded_workspace/4) motor_step_old/: platformio.ini
Embedded_workspace/4) motor_step_old/src/: main.cpp
Embedded_workspace/5) motor_step/src/: main.cpp
Embedded_workspace/6) motor_encoder_old/: platformio.ini
Embedded_workspace/6) motor_encoder_old/src/: main.cpp
Embedded_workspace/7) motor_encoder/src/: main.cpp
Embedded_workspace/8) motor_position_control/lib/Encoder/: AS5601.h  EncoderI2C.h
Embedded_workspace/8) motor_position_control/lib/I2CRW/: I2CRW.h
Embedded_workspace/8) motor_position_control/src/: main.cpp
Embedded_workspace/8) motor_position_control/src/Encoder/: AS5601.cpp
Embedded_workspace/8) motor_position_control/src/I2CRW/: I2CRW.cpp
Embedded_workspace/9) ros_serial/: platformio.ini
Embedded_workspace/9) ros_serial/lib/SerialAck/: SerialAck.cpp  SerialAck.h
Embedded_workspace/9) ros_serial/src/: main.cpp
ROS_workspace/: build.sh  comandi_ros.txt
ROS_workspace/src/beginner_tutorials/: CMakeLists.txt  package.xml
ROS_workspace/src/beginner_tutorials/src/: listener.cpp  talker.cpp
ROS_workspace/src/lab_cib_2019/: CMakeLists.txt  note_progetto.txt  package.xml
ROS_workspace/src/lab_cib_2019/include/: Serial.h  utility.h
ROS_workspace/src/lab_cib_2019/launch/: master_node.launch
ROS_workspace/src/lab_cib_2019/msg/: board_status.msg
ROS_workspace/src/lab_cib_2019/src/: Serial.cpp  counter.cpp  (+2 more)
ROS_workspace/src/turtle_figure/: CMakeLists.txt  package.xml
ROS_workspace/src/turtle_figure/launch/: turte_circle.launch  turte_circle_plus.launch
ROS_workspace/src/turtle_figure/src/: turtle_circle.cpp
